# dm_corean

./: README.md  pyproject.toml
data/: YOUTUBE_VIDEO_CATEGORIES_RU.xlsx
data/channels/: Channels_search.xlsx  channels_union_base.xlsx  k_beauty_Channel_characteristics.xlsx  бьюти блогеры_channels.xlsx
data/channels_video/: video_redautumn.xlsx
data/seminar3/: report.html  Каналы_Not_sorted+Sorted.xlsx
data/seminar4/: Channel_Not_sorted+Sorted+Date.xlsx  Channel_Not_sorted+Sorted.xlsx  Channel_characteristics.xlsx  Video_Not_sorted+Sorted+Date.xlsx
data/seminar6/: VideoCharacteristics_video_redautumn.xlsx  VideoCharacteristics_корейская_косметика.xlsx  VideoCharacteristics_корейскаякосметика.xlsx  Video_filtered_Comments.xlsx  Video_filtered_channels.xlsx
data/video/: Video_characteristics_Корейская_косметика.xlsx  Video_characteristics_КорейскаяКосметика.xlsx  k beauty_Video_characteristics.xlsx
notebooks/: template.ipynb
notebooks/10/: comment_moderation.ipynb
notebooks/11_nlp/: emotions.ipynb  pca.ipynb  supervised_1.ipynb  supervised_chaid.ipynb  supervised_multi.ipynb  text_preprocessing.ipynb  text_proc_again.ipynb  topic_modelling.ipynb  zero_shot.ipynb
notebooks/2/: search_2_1.ipynb  search_2_2.ipynb
notebooks/3/: search_31(fixed).ipynb  search_32(fixed).ipynb  search_33(fixed).ipynb
notebooks/4/: 43_channels.ipynb  channel_analytics.ipynb  search_41(fixed).ipynb  search_42(video).ipynb  search_42.ipynb  сhannels_characteristics.ipynb
notebooks/5/: channel_5(x).ipynb  channel_5.ipynb  channel_51.ipynb  video_53.ipynb  video_characteristics.ipynb
notebooks/6/: 3_1_YouTube_videos_getDislikes.ipynb  video_61.ipynb  video_62.ipynb  video_categories.ipynb  video_extract_date.ipynb  video_from_channels.ipynb  video_from_channels2.ipynb
notebooks/7/: seminar_71(desc_stat).ipynb  (+1 more)
(+23 files in other folders)
