[tool.poetry]
name = "dataminingprojects"
version = "0.1.0"
description = ""
authors = ["andrey <kazachinskii.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyter = "^1.0.0"
pandas = "^1.5.3"
google-api-python-client = "^2.73.0"
pyaml = "^21.10.1"
openpyxl = "^3.0.10"
youtube-transcript-api = "^0.5.0"
pandas-profiling = "^3.6.6"
scikit-learn = "^1.2.1"
randan = "^0.2.1"
plotly = "^5.13.1"
nltk = "^3.8.1"
wordcloud = "^1.8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
