[tool.poetry]
name = "dataminingprojects"
version = "0.1.0"
description = ""
authors = ["andrey <kazachinskii.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyter = "^1.0.0"
google-api-python-client = "^2.73.0"
pyaml = "^21.10.1"
openpyxl = "^3.0.10"
youtube-transcript-api = "^0.5.0"
scikit-learn = "^1.2.1"
nltk = "^3.8.1"
wordcloud = "^1.8.2.2"
ipywidgets = "^8.0.6"
plotly = "^5.14.1"
pymystem3 = "^0.2.0"
gensim = "^4.3.1"
pyldavis = "^3.4.1"
torch = "^2.0.1"
transformers = "^4.29.2"
randan = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
